cabal-version:      >=1.10
name:               http2-tls
version:            0.0.0
license:            BSD3
license-file:       LICENSE
maintainer:         Kazu Yamamoto <kazu@iij.ad.jp>
author:             Kazu Yamamoto <kazu@iij.ad.jp>
homepage:           https://github.com/kazu-yamamoto/http2-tls
synopsis:           Library for HTTP/2 over TLS
description:
    Using the HTTP/2 library over TLS

category:           Network
build-type:         Simple

source-repository head
    type:     git
    location: https://github.com/kazu-yamamoto/http2-tls

library
    exposed-modules:
        Network.HTTP2.TLS.Client

    other-modules:
        Network.HTTP2.TLS.Config
        Network.HTTP2.TLS.IO
        Network.HTTP2.TLS.Supported

    default-language:   Haskell2010
    default-extensions: Strict StrictData
    ghc-options:        -Wall
    build-depends:
        base >=4.9 && <5,
        bytestring,
        data-default-class,
        http2,
        network,
        recv,
        time-manager,
        tls,
        unliftio
